--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,6 +53,7 @@
   .main-bg-img {
     background-image: url("/images/main/index-background.jpg");
     background-repeat: no-repeat;
+    background-size: auto;
   }
 
   .main-title {
@@ -188,10 +189,6 @@ text-align: center;
   line-height: 26px;
 }
 
-.newsletter-form {
-
-}
-
 .newsletter-button {
   font-weight: 700;
   font-size: 20px;
@@ -214,6 +211,121 @@ text-align: center;
   text-transform: uppercase;
 }
 
+.filter {
+background-image: url("/images/filter-content/filter.jpg");
+background-size: 100% auto;
+background-repeat: no-repeat;
+color: #FFFFFF;
+}
 
+.inner-header-title {
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 78px;
+}
+
+.breadcrumbs-link {
+  text-transform: capitalize;
+  text-decoration: none;
+  color: #FFFFFF;;
+}
+
+.breadcrumbs-item {
+font-weight: 400;
+font-size: 16px;
+}
+
+.catalog-filter-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  text-transform: capitalize;
+}
+
+.catalog-filter-item {
+  font-weight: 400;
+}
+
+.button-apply {
+  background: #82B3D3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.offers-found {
+
+  font-weight: 700;
+font-size: 30px;
+line-height: 36px;
+text-transform: uppercase;
+}
+
+.product-card-link{
+  text-transform: capitalize;
+  text-decoration: none;
+  color: #000000;
+}
+
+.product-card-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+.hotel {
+  color: #333333;
+  font-weight: 400;
+}
+
+.product-card-button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  background: #82B3D3;
+}
+
+.rating-number {
+font-weight: 400;
+font-size: 16px;
+line-height: 20px;
+text-align: center;
+text-transform: uppercase;
+color: #333333;
+background: #F2F2F2;
+border-radius: 4px;
+}
+
+.pagination-link {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background: #82B3D3;
+  border-radius: 4px;
+}
+
+.pagination-current {
+  color: #000000;
+  background: #F2F2F2;
+  border-radius: 4px;
+}
+
+.number-offers {
+  color: #333333;
+}
+
+.catalog-newsletter {
+  color: #000000;
+  text-align: center;
+}
+
+.page-footer-description-catalog {
+  color: #333333;
+}
 
 
