--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@font-face {
+  @font-face {
     font-family: "PT Sans";
     font-style: normal;
     font-weight: 400;
@@ -13,10 +13,6 @@
     src: url("fonts/pt-sans-bold.woff2") format("woff2");
     font-display: swap;
   }
-
-
-
-
   body {
     font-family: "PT Sans", sans-serif;
     font-size: 18px;
@@ -37,12 +33,12 @@
   }
 
   .page-header {
-    color:#000000;
+    color: #000000;
     background-color: #ffffff;
   }
   
   .navigation-link {
-    color:#000000;
+    color: #000000;
     font-weight: 700;
     font-size: 20px;
     line-height: 26px;
@@ -50,26 +46,17 @@
     text-decoration: none;
   }
 
-  div {
+  .main-background {
     background-image: url("/images/main/index-background.jpg");
     background-repeat: no-repeat;
     background-size: 100% auto;
   }
   
-  p {
-    background-image: none;
-  }
-
-  .main-mask{
+  .main-logo {
     background-image: url("/images/main/main-mask.svg");
     background-repeat: no-repeat;
+    background-size: 100% auto;
   }
-
-  
-
-
-
-
 
   .main-title {
     font-weight: 700;
@@ -110,8 +97,9 @@
     font-weight: 400;
   }
 
-  .advantages-item
-   {
+
+  
+  .advantages-item {
     font-weight: 700;
     font-size: 24px;
     line-height: 28px;
@@ -121,8 +109,7 @@
     background-color: #ffffff;
   }
 
-  .advantages-title
-   {
+  .advantages-title {
     font-weight: 700;
     font-size: 24px;
     line-height: 28px; 
@@ -139,22 +126,10 @@
   }
 
   .advantages-item-rgba {
-   font-weight: 700;
-   font-size: 24px;
-   line-height: 28px;
-   text-align: center;
-   text-transform: uppercase;
-   color: #000000;
    background: rgba(131, 179, 211, 0.12);
- }
+  }
 
- .advantages-item-rgba2 {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #000000;
+.advantages-item-rgba2 {
   background: rgba(131, 179, 211, 0.2);
 }
  
@@ -184,11 +159,11 @@
 }
 
 .newsletter {
-background-image: url(/images/footer/background-subscribe.jpg);
-background-size: 100% auto;
-background-repeat: no-repeat;
-color: #FFFFFF;
-text-align: center;
+  background-image: url(/images/footer/background-subscribe.jpg);
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  color: #FFFFFF;
+  text-align: center;
 }
 
 .page-footer-title {
@@ -227,10 +202,10 @@ text-align: center;
 }
 
 .filter {
-background-image: url("/images/filter-content/filter.jpg");
-background-size: 100% auto;
-background-repeat: no-repeat;
-color: #FFFFFF;
+  background-image: url("/images/filter-content/filter.jpg");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  color: #FFFFFF;
 }
 
 .inner-header-title {
@@ -246,8 +221,8 @@ color: #FFFFFF;
 }
 
 .breadcrumbs-item {
-font-weight: 400;
-font-size: 16px;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 .catalog-filter-title {
@@ -271,9 +246,9 @@ font-size: 16px;
 .offers-found {
 
   font-weight: 700;
-font-size: 30px;
-line-height: 36px;
-text-transform: uppercase;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
 }
 
 .product-card-link{
@@ -301,14 +276,14 @@ text-transform: uppercase;
 }
 
 .rating-number {
-font-weight: 400;
-font-size: 16px;
-line-height: 20px;
-text-align: center;
-text-transform: uppercase;
-color: #333333;
-background: #F2F2F2;
-border-radius: 4px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #333333;
+  background: #F2F2F2;
+  border-radius: 4px;
 }
 
 .pagination-link {
