--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,16 @@
     src: url("fonts/pt-sans-bold.woff2") format("woff2");
     font-display: swap;
   }
+
+  html {
+    height: 100%;
+  }
+
   body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
     font-family: "PT Sans", sans-serif;
     font-size: 18px;
     line-height: 21px;
@@ -39,6 +48,28 @@
     color: #000000;
     background-color: #ffffff;
   }
+
+  .navigation {
+    display: flex;
+    width: 1060px;
+    margin: 0 auto;
+  }
+
+  .navigation-logo {
+    width: 140px;
+    margin-right: auto;
+  }
+
+  .navigation-list {
+    width: 420px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .navigation-user {
+    max-width: 300px;
+    margin-left: auto;
+  }
   
   .navigation-link {
     color: #000000;
@@ -49,8 +80,28 @@
     text-decoration: none;
   }
 
-  div .main-background {
-    background-image: url("/images/main/index-background.jpg"), url("/images/main/main-mask.svg");
+  .main-container {
+    flex-grow: 1;
+  }
+
+  .page-container {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+  .main-logo {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .main-background {
+    background-image: url("/images/main/index-background.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+  }
+
+  .main-logo {
+    background-image: url("/images/main/main-mask.svg");
     background-repeat: no-repeat;
     background-size: 100% auto;
   }
@@ -68,6 +119,13 @@
     font-size: 22px;
     line-height: 26px;
     text-align: center;
+  }
+
+  .advantages-list {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
   }
 
   .advantages-item-white {
