--- a/styles/styles.css
+++ b/styles/styles.css
@@ -303,6 +303,16 @@ body {
   width: 1040px;
 }
 
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.product-card {
+  
+}
+
 .pagination-line {
   display: flex;
   margin: 0 auto;
