--- a/4/styles/styles.css
+++ b/4/styles/styles.css
@@ -1,189 +1,188 @@
-  @font-face {
-    font-family: "PT Sans";
-    font-style: normal;
-    font-weight: 400;
-    src: url("fonts/pt-sans-regular.woff2") format("woff2");
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: "PT Sans";
-    font-style: normal;
-    font-weight: 700;
-    src: url("fonts/pt-sans-bold.woff2") format("woff2");
-    font-display: swap;
-  }
-
-  html {
-    height: 100%;
-  }
-
-  body {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    font-family: "PT Sans", sans-serif;
-    font-size: 18px;
-    line-height: 21px;
-    color: #000000;
-    background-color: #ffffff;
-  }
-
-  .button {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 20px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #ffffff;
-    background: #756157;
-    border-radius: 4px;
-  }
-
-  .page-header {
-    color: #000000;
-    background-color: #ffffff;
-  }
-
-  .navigation {
-    display: flex;
-    width: 1060px;
-    margin: 0 auto;
-  }
-
-  .navigation-logo {
-    width: 140px;
-    margin-right: auto;
-  }
-
-  .navigation-list {
-    width: 420px;
-    margin: 0;
-    padding: 0;
-  }
-
-  .navigation-user {
-    max-width: 300px;
-    margin-left: auto;
-  }
-  
-  .navigation-link {
-    color: #000000;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 26px;
-    text-transform: capitalize;
-    text-decoration: none;
-  }
-
-  .main-container {
-    flex-grow: 1;
-  }
-
-  .page-container {
-    width: 1200px;
-    margin: 0 auto;
-  }
-
-  .main-logo {
-    display: block;
-    margin: 0 auto;
-  }
-
-  .main-background {
-    background-image: url("/images/main/index-background.jpg");
-    background-color: #333333;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-  }
-
-  .main-logo {
-    background-image: url("/images/main/main-mask.svg");
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-  }
-
-  .main-title {
-    font-weight: 700;
-    font-size: 30px;
-    line-height: 36px;
-    text-align: center;
-    text-transform: uppercase;
-  }
-
-  .main-description {
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 26px;
-    text-align: center;
-  }
-
-  .advantages-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
-  }
-
-.white-advantages-item {
-  width: 400px;
-  text-align: center;
-  color: #FFFFFF;
-  background-color: #82B3D3;
+@font-face {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("fonts/pt-sans-regular.woff2") format("woff2");
+  font-display: swap;
 }
 
-.white-advantages-title {
-  text-transform: uppercase;
+@font-face {
+  font-family: "PT Sans";
+  font-style: normal;
   font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-} 
-
-.white-advantages-description-number {
-  font-weight: 400;
+  src: url("fonts/pt-sans-bold.woff2") format("woff2");
+  font-display: swap;
 }
 
-.white-advantages-description {
-  font-weight: 400;
+html {
+  height: 100%;
 }
 
-  .advantages-item {
-    width: 400px;
-    text-align: center;
-    color: #000000;
-    background-color: #ffffff;
-  }
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000000;
+  background-color: #ffffff;
+}
 
-  .advantages-title {
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 28px; 
-  }
+.button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #ffffff;
+  background: #756157;
+  border-radius: 4px;
+}
 
-  .advantages-description-number {
-    font-weight: 400;
-    color: #333333;
-  }
-
-  .advantages-description {
-    font-weight: 400;
-    color: #333333;
-  }
-
-  .rgba {
-   background: rgba(131, 179, 211, 0.12);
-  }
+.rgba {
+  background: rgba(131, 179, 211, 0.12);
+}
 
 .rgba2 {
   background: rgba(131, 179, 211, 0.2);
 }
+
+.page-header {
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.navigation {
+  display: flex;
+  width: 1060px;
+  margin: 0 auto;
+}
+
+.navigation-logo {
+  width: 140px;
+  margin-right: auto;
+}
+
+.navigation-list {
+  width: 420px;
+  margin: 0;
+  padding: 0;
+}
+
+.navigation-user {
+  max-width: 300px;
+  margin-left: auto;
+}
+  
+.navigation-link {
+  color: #000000;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  text-transform: capitalize;
+  text-decoration: none;
+}
+
+.main-container {
+  flex-grow: 1;
+}
+
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.main-logo {
+  display: block;
+  margin: 0 auto;
+  padding: 51px;
+}
+
+.main-background {
+  background-image: url("/images/main/main-mask.svg"), url("/images/main/index-background.jpg");
+  height: 485px;
+  background-position: bottom;
+  background-color: antiquewhite;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+}
+
+.main-title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.main-description {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+}
+
+.advantages-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+}
+
+.advantages-item-img {
+  width: 800px;
+  height: 384px;
+  background-image: url("/images/main/real-town.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+}
+
+.advantages-item {
+  width: 400px;
+  text-align: center;
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.advantages-title {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px; 
+}
+
+.advantages-description-number {
+  font-weight: 400;
+  color: #333333;
+}
+
+.advantages-description {
+  font-weight: 400;
+  color: #333333;
+}
  
+.advantages-item-white {
+  color: #FFFFFF;
+}
+
+.advantages-title-white{
+  color: #FFFFFF;
+}
+
+.advantages-description-white {
+  color: #FFFFFF;
+}
+
+.advantages-item-bgcolor-blue {
+  background-color: #82B3D3;
+}
+
 .appointment {
   display: flex;
   width: 1200px;
@@ -191,7 +190,6 @@
   flex-direction: column;
   text-align: center;
 }
-
 
 .appointment-title {
   font-weight: 700;
@@ -254,7 +252,7 @@
   line-height: 26px;
 }
 
-.newsletter-button{
+.newsletter-button {
   background: #82B3D3;
 }
 
@@ -305,6 +303,16 @@
   display: flex;
   margin: 0 auto;
   width: 1040px;
+}
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.product-card {
+  
 }
 
 .pagination-line {
@@ -441,4 +449,27 @@
   color: #333333;
 }
 
+/* .footer-social-vk {
+  background-image: url(/images/footer/social-vkontakte.svg); 
+  background-repeat: no-repeat;
+}
 
+.footer-social-tg {
+  background-image: url(/images/footer/social-telegram.svg);
+  background-repeat: no-repeat;
+}
+
+.footer-social-yt {
+  background-image: url(/images/footer/social-youtube.svg);
+  background-repeat: no-repeat;
+}
+
+.basket {
+  background-image: url(/images/header/favorite.svg);
+  background-repeat: no-repeat;
+}
+
+.search {
+  background-image: url(/images/header/search.svg);
+  background-repeat: no-repeat;
+} */
