--- a/styles/styles.css
+++ b/styles/styles.css
@@ -345,22 +345,38 @@ body {
 .catalog-search {
   display: flex;
   width: 1060px;
+  height: 72px;
   margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 56px;
 }
 
 .offers-found {
-  width: 400px;
-  margin-right: auto;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  margin-right: 190px;
 }
 
 .select-control {
+  list-style-type: none;
   width: 290px;
   margin-left: auto;
 }
 
-.bcatalog-button {
+.catalog-button {
+  display: flex;
+  margin-top: 0;
   width: 160px;
   margin-left: auto;
+
+}
+
+.button-light {
+  width: 48px;
+  height: 48px;
+  margin-right: 8px;
 }
 
 .product-list-hotel {
@@ -373,6 +389,9 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .product-card {
@@ -386,11 +405,28 @@ body {
 }
 
 .pagination{
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
   width: 400px;
   margin-right: auto;
 }
 
+.pagination-link {
+  display: block;
+  box-sizing: border-box;
+  width: 60px;
+  height: 60px;
+  padding: 12px 24px;
+  text-decoration: none;
+  margin-right: 8px;
+}
+
 .number-offers {
+  display: flex;
+  margin: 0;
+  padding: 0;
   width: 390px;
   margin-left: auto;
 }
@@ -433,17 +469,11 @@ body {
 
 .catalog-filter-item {
   font-weight: 400;
+  list-style-type: none;
 }
 
 .button-apply {
   background: #82B3D3;
-}
-
-.offers-found {
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 36px;
-  text-transform: uppercase;
 }
 
 .product-card-link{
@@ -507,6 +537,23 @@ body {
   text-align: center;
   color: #000000;
   text-align: center;
+}
+
+.breadcrumbs {
+  display: flex;
+  margin: 0;
+  padding: 0; 
+  list-style-type: none;
+}
+
+/* .breadcrumbs-arrow {
+  background-image: url("/images/filter-content/vector-catalog-galo4ka.svg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+} */
+
+.breadcrumbs-item {
+  margin-right: 10px;
 }
 
 .page-footer-description-catalog {
