--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,6 +48,7 @@ body {
   line-height: 20px;
   display: flex;
   align-items: center;
+  justify-content: center;
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
@@ -84,6 +85,7 @@ body {
   display: flex;
   flex-wrap: wrap; 
   justify-content: center;
+  align-items: center;
   width: 420px;
   margin: 0;
   padding: 0;
@@ -444,11 +446,34 @@ body {
   padding: 0;
 }
 
-.product-card-flex-box{
+.product-card-button-flex-box{
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  margin-bottom: 16px;
 }
+
+.overall-size {
+  width: 140px;
+  height: 37px;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  margin-right: 20px;
+}
+
+.overall-size:nth-child(2n) {
+  margin-right: 0;
+}
+
+.product-card-more {
+  margin-right: 20px;
+}
+
+.img-star {
+  margin-right: 6px;
+}
+
+
 
 .pagination {
   display: flex;
@@ -524,20 +549,27 @@ body {
 }
 
 .product-card-link{
+  display: flex;
+  flex-direction: column;
   text-transform: capitalize;
   text-decoration: none;
   color: #000000;
+  margin: 0;
+  margin-bottom: 16px;
 }
 
 .product-card-title {
+  margin: 0;
+  margin-top: 16px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
 }
 
-.hotel {
+.hotel-card-price {
   color: #333333;
   font-weight: 400;
+  height: 21px;
 }
 
 .product-card-button {
