--- a/styles/styles.css
+++ b/styles/styles.css
@@ -451,9 +451,9 @@ body {
   column-gap: 18px;
 }
 
-.product-card {
+/* .product-card {
   padding: 20px;
-}
+} */
 
 .pagination-line {
   display: flex;
@@ -462,7 +462,7 @@ body {
   padding: 0;
 }
 
-.product-card-button-flex-box{
+/* .product-card-button-flex-box{
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 16px;
@@ -478,15 +478,11 @@ body {
 
 .overall-size:nth-child(2n) {
   margin-right: 0;
-}
+} */
 
-.product-card-more {
+/* .product-card-more {
   margin-right: 20px;
-}
-
-.img-star {
-  margin-right: 6px;
-}
+} */
 
 .pagination {
   display: flex;
@@ -561,8 +557,8 @@ body {
 }
 
 .product-card-link{
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   text-transform: capitalize;
   text-decoration: none;
   color: #000000;
@@ -570,17 +566,69 @@ body {
   margin-bottom: 16px;
 }
 
-.product-card-title {
+/* .product-card-title {
   margin: 0;
   margin-top: 16px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+} */
+
+/* .hotel-card-price {
+  color: #333333;
+  font-weight: 400;
+} */
+
+/* .product-card-button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  background: #82B3D3;
+} */
+
+/* .rating-number {
+  font-weight: 400;
+  color: #333333;
+  background: #F2F2F2;
+} */
+
+.product-card-grid-box {
+  display: grid;
+  grid-template-rows: 211px min-content min-content min-content min-content;
+  grid-template-columns: 140px 140px;
+  margin: 20px;
+  row-gap: 16px;
+  column-gap: 20px;
+}
+
+.product-card-title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  grid-column: 1 / -1;
+  grid-row: 2 / 3;
+}
+
+.hotel-card-hotel {
+  margin: 0;
+  font-weight: 400;
+  color: #333333;
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
 }
 
 .hotel-card-price {
-  color: #333333;
+  margin: 0;
   font-weight: 400;
+  color: #333333;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+.product-card-more {
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
 }
 
 .product-card-button {
@@ -588,12 +636,27 @@ body {
   font-size: 16px;
   line-height: 20px;
   background: #82B3D3;
+  grid-column: 2 / 3;
+  grid-row: 4 / 5;
 }
 
+.img-star {
+  margin-right: 6px;
+} 
+
+.rating-star {
+  margin: 0;
+  grid-column: 1 / 2;
+  grid-row: -1 / -2;
+} 
+
 .rating-number {
+  margin: 0;
   font-weight: 400;
   color: #333333;
   background: #F2F2F2;
+  grid-column: 2 / 3;
+  grid-row: -1 / -2;
 }
 
 .pagination-link {
