--- a/6/styles/styles.css
+++ b/6/styles/styles.css
@@ -154,13 +154,30 @@ body {
   text-align: center;
 }
 
-.advantages-list {
+/* .advantages-list {
   display: flex;
   justify-content: stretch;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style-type: none;
+} */
+
+.advantages-list {
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  word-wrap: break-word; 
+}
+
+.advantages-item-grid-box-sedona {
+  grid-column: 1 / -1;
+}
+
+.advantages-item-grid-box-bridge {
+  grid-column: 1 / -1;
 }
 
 .advantages-item-img {
@@ -280,11 +297,11 @@ body {
 }
 
 .appointment-button {
-  display: block;
+  
   margin-top: 56px;
   margin-bottom: 93px;
   width: 574px;
-  height: 60px;
+  padding: 12px;
   font-size: 20px;
   line-height: 36px;
 }
@@ -557,22 +574,21 @@ body {
 }
 
 .product-card-link{
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
   text-transform: capitalize;
   text-decoration: none;
   color: #000000;
-  margin: 0;
-  margin-bottom: 16px;
+  margin: 16px 20px 0;
 }
 
-/* .product-card-title {
+.product-card-title {
   margin: 0;
   margin-top: 16px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
-} */
+} 
 
 /* .hotel-card-price {
   color: #333333;
@@ -594,20 +610,11 @@ body {
 
 .product-card-grid-box {
   display: grid;
-  grid-template-rows: 211px min-content min-content min-content min-content;
   grid-template-columns: 140px 140px;
-  margin: 20px;
+  margin: 16px 20px 20px;
   row-gap: 16px;
   column-gap: 20px;
-}
-
-.product-card-title {
-  margin: 0;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  grid-column: 1 / -1;
-  grid-row: 2 / 3;
+  word-wrap: break-word;
 }
 
 .hotel-card-hotel {
@@ -615,7 +622,6 @@ body {
   font-weight: 400;
   color: #333333;
   grid-column: 1 / 2;
-  grid-row: 3 / 4;
 }
 
 .hotel-card-price {
@@ -623,12 +629,10 @@ body {
   font-weight: 400;
   color: #333333;
   grid-column: 2 / 3;
-  grid-row: 3 / 4;
 }
 
 .product-card-more {
   grid-column: 1 / 2;
-  grid-row: 4 / 5;
 }
 
 .product-card-button {
@@ -637,17 +641,20 @@ body {
   line-height: 20px;
   background: #82B3D3;
   grid-column: 2 / 3;
-  grid-row: 4 / 5;
 }
 
 .img-star {
+  background-image: url("/images/hotel/vector-star.svg");
+  background-repeat: no-repeat;
+  background-size: 18px 17px;
+  margin: 0;
+  padding: 0;
   margin-right: 6px;
 } 
 
 .rating-star {
   margin: 0;
   grid-column: 1 / 2;
-  grid-row: -1 / -2;
 } 
 
 .rating-number {
@@ -656,7 +663,6 @@ body {
   color: #333333;
   background: #F2F2F2;
   grid-column: 2 / 3;
-  grid-row: -1 / -2;
 }
 
 .pagination-link {
